@@ -507,7 +507,7 @@ MAYBE_AREA_A	[ ]?#?
 	   needed to properly handle the first line in each buffer, that for
 	   some reason always starts with a space.
 	*/
-	fprintf (ppout, "\n#area_a\n");
+	fprintf (ppout, "#area_a\n");
 }
 
 "CONTROL"[ ,;\n]+"DIVISION" {
@@ -2501,11 +2501,6 @@ start:
 	} else {
 		/* Insert newlines at the start of the buffer */
 		gotcr = strlen (buff);
-		if (newline_count != 0) {
-			memmove (buff + newline_count, buff, gotcr + 1);
-			memset (buff, '\n', newline_count);
-			gotcr += newline_count;
-		}
 		if (in_area_a) {
 			/* (*area-a*): prepend special marker `#', indicating
 			   the current non-continuation line starts in area A
@@ -2514,8 +2509,13 @@ start:
 
 			   Assumes `buff' is large enough for one extra char. */
 			memmove (buff + 1, buff, gotcr + 1);
-			buff[1] = '#';
+			buff[0] = '#';
 			gotcr += 1;
+		}
+		if (newline_count != 0) {
+			memmove (buff + newline_count, buff, gotcr + 1);
+			memset (buff, '\n', newline_count);
+			gotcr += newline_count;
 		}
 		newline_count = 1;
 	}
